--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,21 +4,24 @@
     --function-timing: cubic-bezier(0.4, 0, 0.2, 1);
 	--accent-color: #4d5ae5;
     --secondary-accent-color: #404bbf;
+	--background-color:#fafafa;
+	--fonts-color: #212121;
 }
 
 *{
 	box-sizing: border-box;
 	list-style: none;
 	text-decoration: none;
+	flex-wrap: wrap;
+    justify-content: center;
 	}
 
 body{
 	font-family: "Raleway", sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	background-color: #fafafa;
-	color: #212121;
-	line-height: 1.5;
+	background-color:var(--background-color);
+	color: var(--fonts-color)
 }
 
 .container{
@@ -31,7 +34,7 @@ body{
 
 .card-image {
 	display: block;
-	max-width: 400px;
+	max-width: 300px;
 	height: auto;
 	border-radius: 4px;
 	transition: all .2s;
@@ -40,8 +43,6 @@ body{
 .gallery {
 	display: flex;
     column-gap: 24px;
-    flex-wrap: wrap;
-    justify-content: center;
 }
 
 .photo-card {
@@ -61,18 +62,18 @@ body{
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
     padding: 8px 108px 8px 16px;
-	background: #f5f5fa;
+	background:var(--background-color);
     font-size: 12px;
     line-height: 2;
-	color: #212121;
+	color:var(--fonts-color);
 	margin-right: 30px;
 }
 
 .btn {
 	cursor: pointer;
     position: relative;
-    padding: 8px 64px 8px 24px;
-	background: #4d5ae5;
+    padding: 8px 64px 8px 64px;
+	background: var(--accent-color);
 	color:#f5f5fa;
 	border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -83,13 +84,23 @@ body{
 	transition: var(--function-timing), var(--function-duration);
 }
 
+@media screen and (max-width: 482px) {
+.form-input {
+	margin-bottom: 20px;
+	flex-wrap: wrap;
+	margin-right: 0;
+}
+}
+
 .btn:hover,
 .btn:focus {
     background-color: var(--secondary-accent-color);
+	transition: var(--function-timing), var(--function-duration);
 } 
 
 .search-form {
 	margin-bottom: 40px;
+	margin-top: 40px;
 	display: flex;
     justify-content: center;
 }
