--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -35,9 +35,10 @@ body{
 .card-image {
 	display: block;
 	max-width: 300px;
-	height: auto;
 	border-radius: 4px;
 	transition: all .2s;
+	object-fit: cover;
+    height: 200px;
 }
 
 .gallery {
@@ -48,13 +49,14 @@ body{
 .photo-card {
 	box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
     border-radius: 4px;
-    margin-bottom: 72px;
+    margin-bottom: 42px;
 }
 
 .info {
-	padding-top: 15px;
-    padding-bottom: 15px;
 	padding: 15px;
+    display: flex;
+    font-size: 12px;
+    column-gap: 16px;
 }
 
 .form-input {
